feat: 배포를 위한 host 커맨드 설정

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "vite build",
     "lint": "eslint \"src/**/*.js\"",
     "serve": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "host": "vite --host"
   },
   "dependencies": {
     "@coreui/chartjs": "^4.0.0",
